fix responsive overflow

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
   position: absolute;
   display: flex;
   margin-top: 40px;
+  margin-left: 10px;
   flex-direction: column;
   justify-content: center;
   height: 720px;
@@ -108,6 +109,11 @@
     height: 400px;
   }
 
+  .nav-button{
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+
   .nav-icon{
     width: 60px;
     height: 60px;
@@ -131,6 +137,27 @@
     height: 50px;
     margin: 0px;
   }
+
+  .nav-text{
+    font-size: 16px;
+  }
+
+  #home-icon{
+    margin-left: 40px;
+  }
+
+  #proj-icon{
+    margin-left: 5px;
+  }
+  
+  #about-icon{
+    margin-left: 20px;
+  }
+  
+  #contact-icon{
+    margin-left: 50px;
+    margin-top: 0px;
+  }
 }
 
 @media only screen and (max-width: 400px) {
@@ -145,13 +172,30 @@
   }
 
   .nav-icon{
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     margin: 0px;
   }
 
   .nav-text{
     font-size: 14px;
+  }
+
+  #home-icon{
+    margin-left: 35px;
+  }
+  
+  #proj-icon{
+    margin-left: 5px;
+  }
+  
+  #about-icon{
+    margin-left: 20px;
+  }
+  
+  #contact-icon{
+    margin-left: 45px;
+    margin-top: 0px;
   }
 }
 
