--- a/src/index.css
+++ b/src/index.css
@@ -30,14 +30,35 @@ footer{
   z-index: 0;
   margin-top: auto;
   margin-bottom: 25px;
+  padding: 0px 10px;
+  font-size: 14px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
-@media screen {
+@media only screen and (max-width: 1100px) { 
   footer{
-    margin-top: 150px;
+    margin-top: 160px;
+  }
+}
+
+@media only screen and (max-width: 900px) { 
+  footer{
+    margin-top: 160px;
+  }
+}
+
+@media only screen and (max-width: 750px) { 
+  footer{
+    margin-top: 200px;
+    margin-bottom: 0px;
+  }
+}
+
+@media only screen and (max-width: 400px) { 
+  footer{
+    margin-top: 160px;
   }
 }
